<resources>
    <string name="app_name">Dang Ky Phong Hoc</string>
    <string name="dangki">Chưa có tài khoản?<u> Đăng ký</u></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_teacher">Thêm giảng viên</string>
    <string name="teacher_fragment">Quản lý giảng viên</string>
    <string name="add_teacher_fragment">Đăng kí thông tin giảng viên</string>
    <string name="edit_teacher_fragment">Sửa thông tin giảng viên</string>
    <string name="register_teacher">Thêm thông tin giảng viên</string>
    <string name="room_management">Quản lý phòng học</string>
    <string name="male_teacher">Nam</string>
    <string name="female_teacher">Nữ</string>
    <string name="department">Bộ môn</string>
    <string name="room_manament_title">Quản lý phòng học</string>
    <string name="register_room">Đăng ký phòng học</string>
    <string name="switch_darkmode">Chế độ tối</string>
    <string name="switch_language">Ngôn ngữ Anh - Việt</string>
</resources>