<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_teacher"
        android:textSize="30sp"
        android:textColor="#000"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_teacher_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tpedt_teacher_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập tên giảng viên"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_teacher_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tpedt_teacher_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ngày/tháng/năm sinh"
            android:drawableRight="@drawable/calendar"
            android:editable="false"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rdg_teacher_gender"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RadioButton
            android:id="@+id/rdb_male_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_teacher"
            android:layout_marginRight="30dp"
            />

        <RadioButton
            android:id="@+id/rdb_female_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_teacher"
            android:layout_marginLeft="30sp"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/department"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spn_teacher_department"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

        </androidx.appcompat.widget.AppCompatSpinner>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Thêm"
        android:background="@drawable/circle_button"/>
</LinearLayout>