<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo"
        android:text="@string/edit_teacher_fragment"
        android:textColor="#000"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_teacher_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tpedt_teacher_fullname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập tên giảng viên"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_teacher_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tpedt_teacher_dob_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ngày/tháng/năm sinh"
            android:drawableRight="@drawable/calendar"
            android:editable="false"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rdg_teacher_gender_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RadioButton
            android:id="@+id/rdb_male_teacher_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/male_teacher" />

        <RadioButton
            android:id="@+id/rdb_female_teacher_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:text="@string/female_teacher" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spn_teacher_department_edit"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

    </androidx.appcompat.widget.AppCompatSpinner>

    <Button
        android:id="@+id/btn_edit_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_button"
        android:text="Sửa" />
</LinearLayout>